--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Troilus-and-Criseyde_257
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Chaucer, Geoffrey
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/144
     wikipedia: http://en.wikipedia.org/wiki/Geoffrey_Chaucer
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/257#Troilus-and-Criseyde
 gutenberg_issued: '1995-05-01'
 gutenberg_type: Text
 identifiers:
